# segway

./: README.md  TODO.md
src/segway_control/: CMakeLists.txt  package.xml
src/segway_control/config/: balance_controller.yaml  imu_filter.yaml
src/segway_control/include/: balance_controller.hpp  imu_filter_node.hpp
src/segway_control/launch/: balance_controller.launch.py  imu_filter.launch.py
src/segway_control/src/: balance_controller.cpp  imu_filter_node.cpp
src/segway_description/: CMakeLists.txt  package.xml
src/segway_description/launch/: display.launch.py
src/segway_description/urdf/: segway.urdf.xacro  segway_urdf.xacro
src/segway_gazebo/: CMakeLists.txt  package.xml
src/segway_gazebo/config/: segway_controllers.yaml
src/segway_gazebo/launch/: gazebo.launch.py
src/segway_gazebo/worlds/: segway_flat.world
